--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,26 @@
-fastapi==0.95.2
-uvicorn[standard]==0.22.0
-redis==5.3.1
-aiokafka==0.8.0
-numpy==1.26.0
-pandas==2.1.1
-annoy==1.18.3
-scikit-learn==1.3.2
-python-dotenv==1.0.0
-pydantic==2.3.0
-requests==2.31.0
-pytest==7.4.0
+fastapi
+uvicorn[standard]
+aiokafka>=0.8.0
+aioredis>=2.0.0
+pydantic
+prometheus_client
+python-jose[cryptography]
+tenacity
+clickhouse-connect
+sqlalchemy>=1.4
+alembic
+pytest
+pytest-asyncio
+httpx
+requests
+python-json-logger
+torch>=1.12.0
+bentoml>=1.0.0
+faiss-cpu>=1.7.2
+mlflow
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-instrumentation
+opentelemetry-exporter-otlp-proto-grpc
+feast
+pyflink
